# personalAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  graphiti_debug.txt  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: architecture.yml
deploy/cron/: personal-agent-research.cron.example
docs/: README.md  api.md  capture-ask-model-flow.md  deploy.md  entry-router-plan-react-output-flow.md  env.md  golden-set-design.md  llm-prompts.md  ms-graphrag-provider.md  proactive-knowledge-loop.md  production-risk-optimization-plan.md  rag-eval-results.md  retrieval-strategies.md  review-digest.md  workflow-planning-refactor-plan.md
docs/assets/: entry-orchestration.md
docs/evals/: README.md  e2e-quality-cases.md
docs/future/: agent-tool-workflow-redesign.md  control-theory-capability-gaps.md  multi-agent-design.md  rag-quality-optimization.md  research-once-evidence-driven-loop.md  review-digest-feishu-delivery.md  scheduled-intelligence-research.md  workflow-platform-optimization.md
docs/interview/: 01-problem-and-positioning.md  02-overview.md  03-memory.md  04-prompt-engineering.md  05-tools.md  06-planning.md  06-workflow-step-projection.md  07-hitl-and-delete-recovery.md  08-testing-and-eval.md  09-tradeoffs-and-gaps.md  10-deep-dive-retrieval-orchestration.md  11-scenario-judgment.md  12-closing.md  13-loop-engineering-and-control-theory.md  14-project-interview-summary.md  INDEX.md  agent-interview-qa-deep.md  agent-interview-qa-quick.md
docs/topics/: entry.md  (+13 more)
evals/: _metrics_core.py  conftest.py  harvest_router_cases.py  test_ask_quality.py  test_cases.py  test_consolidate_knowledge_flow.py  test_harvest_router_cases.py  test_inspect_knowledge_gaps_flow.py  test_metrics_core.py  test_plan_replan.py  test_retrieval_strategies.py  test_solidify_clarify_flow.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: _normalize_imports.py  _rename_modules.py  capture_planner_llm.py  check_layers.py  draw_entry_graph.py  export_thread_checkpoints.py  probe_capture_end_to_end.py  probe_extract_param_sweep.py  probe_extract_request_capture.py  probe_graph_health.py  probe_langextract_deepseek.py  probe_langextract_qwen.py
testing/: magic_stub.py  playwright.research-quality.config.cjs  research-dialog.playwright.spec.cjs  research-quality-frontend-e2e.playwright.spec.cjs
tests/: conftest.py  note_factory.py  test_agent_flows.py  test_api.py  test_ask_context_artifacts.py  test_audit.py  test_capture_graph_preextract.py  test_checkpoint_scripts.py  test_chunk_quality.py  test_chunking.py  test_cli.py  test_consolidate_knowledge_tool.py  test_consolidate_notes_tool.py  test_context_compression.py  test_contrastive_retriever.py  test_core_projections.py  test_cross_session_store.py  test_document_partition_coordinates.py  test_e2e_quality_scorer.py  test_embedding_trace.py  test_entailment_judge.py  test_entailment_verifier.py  test_episodic_memory.py  test_evidence_conversions.py  test_evidence_engine.py  test_evidence_model.py  test_extract_service.py  test_feishu.py  test_graph_quality.py  test_graph_reranker.py  test_graph_search_strategies.py  test_graph_search_tool.py  test_graphiti_llm_strategies.py  test_graphiti_store_helpers.py  test_graphrag_store.py  test_guardrails.py  test_integration.py  test_knowledge_gap_analyzer.py  test_knowledge_gap_job.py  test_langsmith_tracing.py  (+53 more)
(+539 files in other folders)
