[project]
name = "personal-agent"
version = "0.1.0"
description = "A personal knowledge management agent powered by LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.121.0",
  "graphiti-core>=0.29.0",
  "lark-oapi>=1.6.2",
  "langgraph>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.8.0",
  "psycopg[binary]>=3.2.12",
  "pypdf>=5.9.0",
  "python-multipart>=0.0.20",
  "python-dotenv>=1.0.1",
  "typer>=0.12.3",
  "uvicorn>=0.38.0",
]

[project.scripts]
personal-agent = "personal_agent.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "db: tests that require a running Postgres database",
    "slow: tests that take longer than 1 second",
    "integration: integration tests that exercise multiple components",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
